--- a/.env
+++ b/.env
@@ -1,14 +1,8 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-MYSQL_HOST=194.87.201.53
+MYSQL_HOST=81.31.247.100
 MYSQL_PORT=3306
-MYSQL_USER=gen_user
-MYSQL_PASSWORD='X4m-Od>(b+r\qQ'
-MYSQL_DBNAME=default_db
+MYSQL_USER=xageuZ
+MYSQL_PASSWORD='rzeqhrTybEKETwcy'
+MYSQL_DBNAME=macayaEe
 
 SHADOW_DATABASE_URL="mysql://admin:admin@localhost:3306/mydb?schema=public"
 
